Document that Java 24+ (JEP 491) is required in practice
Fixes #2. On JDK 21-23 a virtual thread that parks while holding a
monitor pins its carrier instead of unmounting. Our carrier is the UI
thread inside UI.access() with the session lock held, so a blocking
dialog opened inside any synchronized block deadlocks the session for
good; Yielder.yield() inside synchronized likewise blocks the thread
calling Iterator.next() forever. Verified on Temurin 21.0.11 (hangs)
vs Temurin 24.0.2 and OpenJDK 25.0.4 (works).

- README: state Java 24+ and explain the pinning deadlock, plus
  -Djdk.tracePinnedThreads=full for those stuck on 21-23.
- CLAUDE.md: record it as the third cross-cutting subtlety.
- Add regression tests parking inside synchronized for both the
  executor and the generator, gated on JDK 24+ since on older JDKs
  they hang the test JVM rather than fail.
- CI: add JDK 24 to the matrix so the JEP 491 baseline is exercised.

No startup guard: this is a demo, not a library.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>